objects/zkmulti__MCPickup__c.object
<CustomObject>
    <fields>
        <fullName>zkmulti__Building_Type_Description__c</fullName>
        <label>Building Type Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Building_Type__c</fullName>
        <label>Building Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Bulk_Shipment__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Bulk Shipment</label>
        <referenceTo>zkmulti__MCBulk_Shipment__c</referenceTo>
        <relationshipLabel>Pickups</relationshipLabel>
        <relationshipName>Pickups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Cancel_Reason__c</fullName>
        <label>Cancel Reason</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__CarrierType__c</fullName>
        <label>Carrier Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Carrier__c</fullName>
        <label>Carrier</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__City__c</fullName>
        <label>City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Close_Time__c</fullName>
        <label>Close Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkmulti__Company_Name__c</fullName>
        <label>Company Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Contact_Email__c</fullName>
        <label>Contact Email</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Contact_Name__c</fullName>
        <label>Contact Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Contact_Phone__c</fullName>
        <label>Contact Phone</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Country__c</fullName>
        <label>Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Courier_Remarks__c</fullName>
        <label>Courier Remarks</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__Currency__c</fullName>
        <label>Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Is_Residential__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Address Is Residential</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Is_UTC_Time__c</fullName>
        <defaultValue>false</defaultValue>
        <label>UTC Time</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Location_Station_Id__c</fullName>
        <label>Location Station Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Mod_Key__c</fullName>
        <label>Mod Key</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Package_Count__c</fullName>
        <label>Package Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Package_Location__c</fullName>
        <label>Package Location</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Package_Type__c</fullName>
        <label>Package Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Pickup_Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pickup Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Pickup_Number__c</fullName>
        <label>Pickup Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Pickup_Processing_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Pickup Processing Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>zkmulti__Pickup_Service_Category__c</fullName>
        <label>Pickup Service Category</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Preference__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Shipmate Preference</label>
        <referenceTo>zkmulti__MCShipmate_Preference__c</referenceTo>
        <relationshipLabel>Pickups</relationshipLabel>
        <relationshipName>Pickups</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>zkmulti__Ready_Time__c</fullName>
        <label>Ready Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>zkmulti__Recipient_Country__c</fullName>
        <label>Recipient Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Reference_Number__c</fullName>
        <label>Reference Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Service_Date__c</fullName>
        <label>Service Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>zkmulti__Service_Type__c</fullName>
        <label>Service Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Street__c</fullName>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>zkmulti__Total_Surcharges__c</fullName>
        <label>Total Surcharges</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkmulti__Total_Taxes__c</fullName>
        <label>Total Taxes</label>
        <precision>10</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>zkmulti__Weight_Units__c</fullName>
        <label>Weight Units</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>zkmulti__Weight__c</fullName>
        <label>Weight</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>zkmulti__Zip_Postal_Code__c</fullName>
        <label>Zip/Postal Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <label>Pickup</label>
    <listViews>
        <fullName>Nolan_Daigle_MCPickup</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>zkmulti__All</fullName>
        <columns>NAME</columns>
        <columns>zkmulti__Carrier__c</columns>
        <columns>zkmulti__Pickup_Number__c</columns>
        <columns>zkmulti__Contact_Name__c</columns>
        <columns>zkmulti__Company_Name__c</columns>
        <columns>zkmulti__Street__c</columns>
        <columns>zkmulti__City__c</columns>
        <columns>zkmulti__State__c</columns>
        <columns>zkmulti__Zip_Postal_Code__c</columns>
        <columns>zkmulti__Country__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>P-{0000}</displayFormat>
        <label>Multi Carrier Pickup Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pickups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>